src/golden/functions/typeerrors/test.golden/undeclaredfield.fl
	struct HoldIt
		String called
		
		
	recoverit (HoldIt e) = e.notcalled

	badarg (String s) = s
	badarg (Number n) = n